# CodeCraft-2021

./: .gitignore  CMakeLists.txt  README.md
include/: CloudServerCenter.h  Config.h  Request.h  Server.h  VM.h  VirtualMachine.h
source/: CodeCraft-2021.cpp
util/2021HWAutoGrader/: 04_01_11_43_44.html  config.json
